pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-missing-to.ub
factory: {
  state-moves: [
    { from: 'resource.old' }
  ]
}
